--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -34,11 +34,25 @@ jobs:
       - name: Adding Known Hosts
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Storing branch name
-        run: branch=$(git symbolic-ref --short HEAD)
+      - name: Determine branch
+        shell: bash
+        run: |
+          # For pull_request events, use the PR source branch; otherwise use the ref name.
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            echo "BRANCH=${{ github.head_ref }}" >> "$GITHUB_ENV"
+          else
+            echo "BRANCH=${{ github.ref_name }}" >> "$GITHUB_ENV"
+          fi
 
       - name: Checkout code on server
-        run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ~/benchmark && git pull origin && git checkout ${{ branch }}"
+        shell: bash
+        run: |
+          ssh "${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}" "
+            cd ~/benchmark &&
+            git fetch origin &&
+            git checkout '$BRANCH' &&
+            git pull --ff-only origin '$BRANCH'
+          "
 
       - name: Run benchmark
         run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ~/benchmark && php tempest data:parse"
