--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "php": "^8.5",
-        "tempest/framework": "^3.2"
+        "tempest/framework": "^3.2",
+        "ext-pcntl": "*"
     },
     "autoload": {
         "psr-4": {
